--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
-    "@tanstack/react-query": "^5.40.1",
-    "@tanstack/react-query-devtools": "^5.40.1",
-    "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
-    "i18next": "^23.11.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.2",
-    "react-router-dom": "^6.23.1",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/icons-material": "5.15.19",
+    "@mui/material": "5.15.19",
+    "@tanstack/eslint-plugin-query": "5.35.6",
+    "@tanstack/react-query": "5.40.1",
+    "@tanstack/react-query-devtools": "5.40.1",
+    "axios": "1.7.2",
+    "date-fns": "3.6.0",
+    "i18next": "23.11.5",
+    "prop-types": "15.8.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-i18next": "14.1.2",
+    "react-router-dom": "6.23.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.77.4",
-    "zustand": "^4.5.2"
+    "sass": "1.77.4",
+    "zustand": "4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,12 +47,12 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "prettier": "^3.3.1",
-    "vite": "^4.5.3"
+    "@vitejs/plugin-react": "4.3.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.2",
+    "prettier": "3.3.1",
+    "vite": "4.5.3"
   }
 }
