--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "@tanstack/react-query-devtools": "5.40.1",
     "axios": "1.7.2",
     "date-fns": "3.6.0",
-    "i18next": "23.11.5",
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-i18next": "14.1.2",
+    "react-hook-form": "7.51.5",
     "react-router-dom": "6.23.1",
     "react-scripts": "5.0.1",
     "sass": "1.77.4",
