--- a/package.json
+++ b/package.json
@@ -46,11 +46,15 @@
     ]
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@vitejs/plugin-react": "4.3.1",
     "eslint": "9.5.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "7.34.2",
+    "globals": "^15.6.0",
     "prettier": "3.3.2",
     "vite": "4.5.3"
   }
